@YELP_HELP_RULES@

HELP_ID = simple-scan
HELP_FILES = index.page \
             adf.page \
             crop.page \
             dpi.page \
             email.page \
             print.page \
             reorder.page \
             rotate.page \
             save.page \
             scanner.page \
             scanning.page

HELP_LINGUAS = de

DISTCLEANFILES = \
	Makefile.in
