@YELP_HELP_RULES@

HELP_ID = simple-scan
HELP_POT = simple-scan-help.pot

HELP_MEDIA = \
             figures/icon.png		\
             figures/preferences.png	\
             figures/scan_toolbar.png

HELP_FILES = index.page \
             adf.page \
             crop.page \
             dpi.page \
             email.page \
             legal.xml \
             print.page \
             reorder.page \
             rotate.page \
             save.page \
             scanner.page \
             scanning.page

HELP_LINGUAS = de

DISTCLEANFILES = \
	Makefile.in
