@YELP_HELP_RULES@

HELP_ID = simple-scan
HELP_POT = simple-scan-help.pot

HELP_MEDIA = \
             figures/icon.png		\
             figures/preferences.png	\
             figures/scan_toolbar.png

HELP_FILES = index.page \
             adf.page \
             brightness-contrast.page \
             crop.page \
             dpi.page \
             email.page \
             legal.xml \
             print.page \
             quality.page \
             reorder.page \
             rotate.page \
             save.page \
             scanner.page \
             scanning.page

HELP_LINGUAS = ar bg cs de en_GB es eu fi fr hu it ja nl pl pt_BR ru sk sl sr uk zh_TW
