languages = [ 'ar',
              'bg',
              'cs',
              'de',
              'en_GB', 'es', 'eu',
              'fi', 'fr',
              'hr', 'hu',
              'ia',
              'it',
              'ja',
              'ku',
              'nb', 'nl',
              'pl', 'pt_BR',
              'ru',
              'sk', 'sl', 'sr', 'sv',
              'uk',
              'zh_TW' ]

# 'delete.page'
# 'external.page'

gnome.yelp ('simple-scan',
            sources: [ 'adf.page',
                       'brightness-contrast.page',
                       'crop.page',
                       'dpi.page',
                       'email.page',
                       'index.page',
                       'legal.xml',          
                       'print.page',
                       'quality.page',
                       'reorder.page',
                       'rotate.page',
                       'save.page',
                       'scanner.page',
                       'scanning.page' ],
            media: [ 'figures/icon.png',
                     'figures/preferences.png',
                     'figures/scan_toolbar.png' ],
            languages: languages,
            symlink_media: false)
