# 'delete.page'
# 'external.page'

gnome.yelp ('simple-scan',
            sources: [ 'adf.page',
                       'brightness-contrast.page',
                       'crop.page',
                       'dpi.page',
                       'email.page',
                       'index.page',
                       'legal.xml',          
                       'print.page',
                       'quality.page',
                       'reorder.page',
                       'rotate.page',
                       'save.page',
                       'scanner.page',
                       'scanning.page' ],
            media: [ 'figures/icon.svg',
                     'figures/preferences.png',
                     'figures/scan_toolbar.png',
                     'figures/scanner_selection.png' ],
            symlink_media: false)
